# Kata04

./: .gitignore  CHANGELOG.md  Kata04.cabal  README.md
src/: Lib.hs  Record.hs  Soccer.hs  Weather.hs
src-test/: Main.hs
